# rqmd

./: .env.telemetry.v1.example  .gitignore  CHANGELOG.md  README.md  agent-workflow.sh  docker-compose.telemetry.v1.yml  pyproject.toml
.github/: copilot-instructions.md  rqmd-bundle.json
.reqmd/: status-catalog.yaml  statuses.yml
docs/: SEMVER.md  TODO.md  acceptance-criteria.md  brainstorm.md  doc-standards.md  github-pages-proposal.md  releasing.md  requirements.md  schema.md  testing.md
init-docs/: README.md  chat-handoff-heading.md  domain-example.md  init-handoff-tail.md  init-interview.yml  init-strategy-existing-markdown.md  legacy-readme-seeded-note.md  scaffold-already-present.md
scratch/: requirements.md
scripts/: ensure_release_tag.py  gh-release-both.sh  local-smoke.sh  play-agent-notification.sh  validate_release_tag.py
tests/: conftest.py  test_RQMD_core_022.py  test_RQMD_core_024.py  test_RQMD_interactive_012.py  test_RQMD_interactive_013.py  test_RQMD_interactive_018.py  test_RQMD_interactive_022.py  test_RQMD_priority_008_undo_history.py  test_RQMD_priority_011.py  test_RQMD_priority_012.py  test_RQMD_time_002_timeline.py  test_RQMD_time_005_compare.py  test_RQMD_time_006_actions.py  test_RQMD_time_007_timeline_filters.py  test_RQMD_time_009_reports.py  test_RQMD_time_010_temporal_matrix.py  test_RQMD_ui_001_screen_write_rendering.py  test_RQMD_ui_003_non_tty_fallback.py  test_RQMD_ui_004_minimal_diff_redraw.py  test_RQMD_ui_005_pagination_cursor.py  test_RQMD_ui_006_footer_legend.py  test_RQMD_ui_007_accessibility.py  test_RQMD_ui_008_resize_handling.py  test_RQMD_ui_010_testing_ci.py  test_RQMD_undo_002_persistence.py  test_RQMD_undo_003_branching.py  test_RQMD_undo_004_confirmation.py  test_RQMD_undo_005_storage_backend.py  test_RQMD_undo_006_metadata.py  test_RQMD_undo_009_history_api.py  test_RQMD_undo_010_matrix.py  test_ai_cli.py  test_automation_api.py  test_colors.py  test_config.py  test_core_engine.py  test_interactive.py  test_interactive_and_colors.py  test_json_speedups.py  test_performance.py  (+4 more)
tmp/: changed_files.txt  check_git.py  err022.txt  final2.txt  final_test.txt  fix_out.txt  fix_out2.txt  fix_out3.txt  fix_status_update.py  fix_workflows.py  fix_workflows2.py  (+25 more)
(+212 files in other folders)
