[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rqmd"
version = "0.1.0"
description = "Acceptance criteria status summary updater and interactive editor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Team" }
]
dependencies = [
  "click>=8.1.0",
  "tabulate>=0.9.0"
]

[project.scripts]
rqmd = "reqmd.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
