[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rqmd"
version = "0.1.0"
description = "Acceptance requirements status summary updater and interactive editor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "RQMD Contributors" }
]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Documentation",
  "Topic :: Utilities",
]
dependencies = [
  "click>=8.1.0",
  "tabulate>=0.9.0",
  "PyYAML>=6.0"
]

[project.urls]
Homepage = "https://github.com/example/rqmd"
Repository = "https://github.com/example/rqmd"
Issues = "https://github.com/example/rqmd/issues"
Changelog = "https://github.com/example/rqmd/blob/main/CHANGELOG.md"

[project.scripts]
rqmd = "rqmd.cli:main"
reqmd = "rqmd.cli:main"
rqmd-ai = "rqmd.ai_cli:main"
reqmd-ai = "rqmd.ai_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-timeout>=2.3.1"
]
speedups = [
  "orjson>=3.10.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rqmd = ["init_docs/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"
